--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
     <div class="keys">
         <div class="icon-arrow"></div>
        <div class="h1">English Vocabulary !</div>
+
 <div class="card">
-      <div class=" key front" data-key="Forture">
+      <div class="key front" data-key="Forture">
           <span class="sound">Forture</span>
       </div>
-      <!-- <div class=" key back">
-        <span class="sound">i</span>
-      </div> -->
+      <div class="key back" data-key="التعذيب">
+        <span class="sound">التعذيب</span>
+      </div>
       </div>
 
-      <!-- <div class="card">
-      <div class="key" data-key="Rugs">
+      <div class="card">
+      <div class="key front" data-key="Rugs">
         <span class="sound">Rugs</span>
       </div>
-      <div class="back">
+      <div class="key back" data-key="بسط/سجاد">
+        <span class="sound">بسط/سجاد</span>
       </div>
-      </div> -->
+      </div>
 
       <div class="key" data-key="Errands">
         <span class="sound">Errands</span>
@@ -177,6 +179,7 @@
       </div>
 
 <audio data-key="1" src="./sounds/BottleCork.mp3"></audio>
+<script  src="https://code.jquery.com/jquery-3.6.0.js"></script>
  <script src="app.js"></script>
 </body>
 </html>
