--- a/home.html
+++ b/home.html
@@ -24,6 +24,7 @@
             place-items: center;
 
         }
+        
         .center{
            margin-top: -7%;
             display: flex;
@@ -98,6 +99,10 @@ button a{
     text-decoration: none;
     color:white;
 }
+.opcity{
+            opacity: .6;
+            cursor:none;
+        }
 
         </style>
 </head>
@@ -108,26 +113,26 @@ button a{
 <div class="center">
     
     <div class="outer circle">
-        <button> <a href="index.html">Week1</a></button>
+        <a href="index.html"><button>Week1</button></a>
         <spna></spna>
         <spna></spna>
     </div>
     <div class="outer circle">
-        <button>Week2</button>
+        <a href="index2.html"><button>Week2</button></a>
         <spna></spna>
         <spna></spna>
     </div>  
-     <div class="outer circle">
+     <div class="outer circle opcity">
         <button>Week3</button>
         <spna></spna>
         <spna></spna>
     </div>   
-    <div class="outer circle">
+    <div class="outer circle opcity">
         <button>Week4</button>
         <spna></spna>
         <spna></spna>
     </div>  
-     <div class="outer circle">
+     <div class="outer circle opcity">
         <button>Week5</button>
         <spna></spna>
         <spna></spna>
