--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
 <body>
     <div class="keys">
         <div class="icon-arrow"></div>
-       <div class="h1">English Vocabulary !</div>
+       <div class="h1">English Vocabulary(Week 2) !</div>
 
 <div class="card">
       <div class="key front" data-key="postage">
