--- a/home.html
+++ b/home.html
@@ -40,6 +40,7 @@
             border: 1px solid cyan;
         }
         .circle{
+            margin-top:50px ;
             height:200px;
             width:200px;
             border-radius: 50%;
@@ -117,23 +118,29 @@ button a{
         <spna></spna>
         <spna></spna>
     </div>
+
     <div class="outer circle">
         <a href="index2.html"><button>Week2</button></a>
         <spna></spna>
         <spna></spna>
     </div>  
-     <div class="outer circle opcity">
-        <button>Week3</button>
+     <div class="outer circle">
+        <a href="index3.html"><button>Week3</button></a>
         <spna></spna>
         <spna></spna>
     </div>   
-    <div class="outer circle opcity">
-        <button>Week4</button>
+    <div class="outer circle ">
+        <a href="index4.html"><button>Week4</button></a>
         <spna></spna>
         <spna></spna>
     </div>  
-     <div class="outer circle opcity">
-        <button>Week5</button>
+     <div class="outer circle">
+        <a href="index5.html"><button>Week5</button></a>
+        <spna></spna>
+        <spna></spna>
+    </div>
+    <div class="outer circle opcity">
+        <button>Week6</button>
         <spna></spna>
         <spna></spna>
     </div>
